# rust-alc-api

./: .bazelrc  .gitignore  .npmrc  .test-config  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.carins  Dockerfile.dtako  Dockerfile.gateway  Dockerfile.tenko  Dockerfile.trouble  MODULE.bazel  Makefile  README.md  archive.sh  build.rs  coverage_100.toml  deploy.sh  dev-plans.config.js  package-lock.json  package.json  自動点呼機器要件抽出.md
.githooks/: pre-commit
.github/: bazel-cache-check.md  bench-warm.md  cache-final.md  cache-final2.md  cache-hit-test.md  cache-verify2.md  final-bench.md  warm-verify.md
cloudrun/: render.sh
crates/alc-auth/: BUILD.bazel  Cargo.toml
crates/alc-auth/src/: jwt.rs  lib.rs  middleware.rs
crates/alc-carins/: BUILD.bazel  Cargo.toml
crates/alc-carins/src/: car_inspection_files.rs  car_inspections.rs  carins_files.rs  lib.rs  nfc_tags.rs
crates/alc-carins/src/repo/: car_inspections.rs  carins_files.rs  mod.rs  nfc_tags.rs
crates/alc-compare/: BUILD.bazel  Cargo.toml
crates/alc-compare/src/: lib.rs
crates/alc-core/: BUILD.bazel  Cargo.toml
crates/alc-core/src/: auth_google.rs  auth_jwt.rs  auth_line.rs  auth_lineworks.rs  auth_middleware.rs  fcm.rs  lib.rs  middleware.rs  models.rs  serde_helpers.rs  storage.rs  webhook.rs
crates/alc-core/src/auth/: middleware.rs  mod.rs
crates/alc-core/src/repo/: auth.rs  mod.rs
crates/alc-core/src/repository/: api_tokens.rs  auth.rs  bot_admin.rs  car_inspections.rs  carins_files.rs  items.rs  lineworks_channels.rs  mod.rs  notify_deliveries.rs  notify_documents.rs  notify_groups.rs  notify_line_config.rs  notify_recipients.rs  sso_admin.rs  tenant_users.rs  trouble_activity_files.rs  trouble_comments.rs  trouble_files.rs  trouble_notification_prefs.rs  trouble_schedules.rs  trouble_task_activities.rs  trouble_task_statuses.rs  trouble_task_types.rs  trouble_tasks.rs  trouble_tickets.rs  trouble_workflow.rs
crates/alc-core/tests/: export_ts.rs
crates/alc-csv-parser/: BUILD.bazel  Cargo.toml
crates/alc-csv-parser/src/: kudgivt.rs  kudguri.rs  lib.rs  test_macros.rs  work_segments.rs
crates/alc-devices/: BUILD.bazel  Cargo.toml
crates/alc-devices/src/: devices.rs  lib.rs
crates/alc-devices/src/repo/: devices.rs  mod.rs
crates/alc-dtako/: BUILD.bazel  Cargo.toml
crates/alc-dtako/src/: archive_reader.rs  dtako_csv_proxy.rs  dtako_daily_hours.rs  dtako_drivers.rs  dtako_event_classifications.rs  dtako_logs.rs  dtako_operations.rs  dtako_restraint_report.rs  dtako_restraint_report_pdf.rs  dtako_scraper.rs  dtako_upload.rs  dtako_vehicles.rs  dtako_work_times.rs  lib.rs  test_macros.rs
crates/alc-dtako/src/repo/: dtako_csv_proxy.rs  dtako_daily_hours.rs  dtako_drivers.rs  dtako_event_classifications.rs  dtako_logs.rs  dtako_operations.rs  dtako_restraint_report.rs  dtako_restraint_report_pdf.rs  dtako_scraper.rs  dtako_upload.rs  dtako_vehicles.rs  dtako_work_times.rs  mod.rs
crates/alc-misc/: BUILD.bazel  Cargo.toml
crates/alc-misc/src/: access_requests.rs  api_tokens.rs  auth.rs  bot_admin.rs  carrying_items.rs  communication_items.rs  driver_info.rs  employees.rs  guidance_records.rs  health.rs  items.rs  lib.rs  measurements.rs  members.rs  sso_admin.rs  staging.rs  tenant_users.rs  timecard.rs  upload.rs
crates/alc-misc/src/repo/: api_tokens.rs  bot_admin.rs  carrying_items.rs  communication_items.rs  driver_info.rs  employees.rs  guidance_records.rs  items.rs  measurements.rs  mod.rs  sso_admin.rs  tenant_users.rs  timecard.rs  webhook.rs
crates/alc-notify/: BUILD.bazel  Cargo.toml
crates/alc-notify/examples/: line_token_issue.rs
crates/alc-notify/src/: distribute.rs  documents.rs  email_documents.rs  groups.rs  ingest.rs  ingest_keys.rs  lib.rs  line_config.rs  line_webhook.rs  lineworks_channels.rs  lineworks_directory.rs  read_tracker.rs  recipients.rs  viewer.rs
crates/alc-notify/src/clients/: line.rs  lineworks.rs  mod.rs
crates/alc-notify/src/repo/: lineworks_channels.rs  mod.rs  notify_deliveries.rs  notify_documents.rs  notify_groups.rs  notify_line_config.rs  notify_recipients.rs
crates/alc-pdf/: BUILD.bazel  Cargo.toml
crates/alc-pdf/src/: lib.rs  render.rs  types.rs
crates/alc-storage/: BUILD.bazel  Cargo.toml
crates/alc-storage/src/: gcs.rs  lib.rs  r2.rs
crates/alc-tenko/: BUILD.bazel  Cargo.toml
crates/alc-tenko/src/: daily_health.rs  equipment_failures.rs  health_baselines.rs  lib.rs  tenko_call.rs  tenko_records.rs  tenko_schedules.rs  tenko_sessions.rs  tenko_webhooks.rs
crates/alc-tenko/src/repo/: daily_health.rs  equipment_failures.rs  health_baselines.rs  mod.rs  tenko_call.rs  tenko_records.rs  tenko_schedules.rs  tenko_sessions.rs  tenko_webhooks.rs
crates/alc-test-helpers/: Cargo.toml
crates/alc-test-helpers/src/: app_state.rs  lib.rs  mock_storage.rs  repos_a.rs  repos_b.rs  repos_c.rs  webhook.rs
crates/alc-trouble/: BUILD.bazel  Cargo.toml
crates/alc-trouble/src/: categories.rs  cloud_tasks.rs  comments.rs  files.rs  lib.rs  lineworks_members.rs  notifications.rs  notifier.rs  schedules.rs  task_statuses.rs  task_types.rs  tasks.rs  tickets.rs  workflow.rs
crates/alc-trouble/src/repo/: mod.rs  trouble_activity_files.rs  trouble_comments.rs  trouble_files.rs  trouble_notification_prefs.rs  trouble_schedules.rs  trouble_task_activities.rs  trouble_task_statuses.rs  trouble_task_types.rs  trouble_tasks.rs  trouble_tickets.rs  trouble_workflow.rs
crates/carins-api/: BUILD.bazel  Cargo.toml
crates/carins-api/src/: main.rs
docs/: grpc-to-rest-checklist.md
manifests/: production.snapshot.json
migrations/: 001_create_tables.sql  002_enable_rls.sql  003_create_users.sql  004_rls_helper_functions.sql  005_expand_measurements.sql  006_employee_code.sql  007_employee_soft_delete.sql  008_face_embedding.sql  009_add_medical_data.sql  010_add_license_dates.sql  011_add_measurement_status.sql  012_add_face_verified.sql  013_create_tenko_schedules.sql  014_create_tenko_sessions.sql  015_create_tenko_records.sql  016_create_webhook_configs.sql  017_create_webhook_deliveries.sql  018_add_phase2_session_statuses.sql  (+64 more)
(+244 files in other folders)
