[workspace]
members = [".", "crates/alc-carins", "crates/alc-core", "crates/alc-csv-parser", "crates/alc-compare", "crates/alc-devices", "crates/alc-dtako", "crates/alc-misc", "crates/alc-notify", "crates/alc-pdf", "crates/alc-storage", "crates/alc-tenko", "crates/carins-api", "crates/dtako-api", "crates/gateway", "crates/tenko-api"]
resolver = "2"

[package]
name = "rust-alc-api"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[dependencies]
alc-carins = { path = "crates/alc-carins" }
alc-core = { path = "crates/alc-core" }
alc-devices = { path = "crates/alc-devices" }
alc-dtako = { path = "crates/alc-dtako" }
alc-misc = { path = "crates/alc-misc" }
alc-notify = { path = "crates/alc-notify" }
alc-tenko = { path = "crates/alc-tenko" }
alc-storage = { path = "crates/alc-storage" }
alc-csv-parser = { path = "crates/alc-csv-parser" }
alc-compare = { path = "crates/alc-compare" }
alc-pdf = { path = "crates/alc-pdf" }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
encoding_rs = "0.8"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
ring = "0.17"
serde_json = "1"
sha2 = "0.10"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
zip = "2"
