module(
    name = "rust_alc_api",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

crate.from_cargo(
    name = "crates_gateway",
    cargo_lockfile = "//bazel/workspaces/gateway:Cargo.lock",
    manifests = ["//bazel/workspaces/gateway:Cargo.toml"],
)

use_repo(crate, "crates", "crates_gateway")
