[package]
name = "alc-carins"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
async-trait = "0.1"
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "chrono", "uuid"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
