[package]
name = "alc-compare"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[dependencies]
alc-csv-parser = { path = "../alc-csv-parser" }
chrono.workspace = true
encoding_rs.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
zip.workspace = true
