load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

rust_library(
    name = "alc-csv-parser",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "alc_csv_parser",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "alc-csv-parser_test",
    crate = ":alc-csv-parser",
)
