[package]
name = "alc-devices"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
axum.workspace = true
chrono.workspace = true
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
uuid.workspace = true
