load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

rust_library(
    name = "alc-dtako",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "alc_dtako",
    deps = all_crate_deps(normal = True) + [
        "//crates/alc-compare",
        "//crates/alc-core",
        "//crates/alc-csv-parser",
        "//crates/alc-pdf",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "alc-dtako_test",
    crate = ":alc-dtako",
)
