[package]
name = "alc-dtako"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[dependencies]
alc-compare = { path = "../alc-compare" }
alc-core = { path = "../alc-core" }
alc-csv-parser = { path = "../alc-csv-parser" }
alc-pdf = { path = "../alc-pdf" }
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
