[package]
name = "alc-dtako"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[dependencies]
alc-compare = { path = "../alc-compare" }
alc-core = { path = "../alc-core" }
alc-csv-parser = { path = "../alc-csv-parser" }
alc-pdf = { path = "../alc-pdf" }
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
chrono.workspace = true
csv.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
zip.workspace = true
