[package]
name = "alc-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
chrono.workspace = true
csv.workspace = true
reqwest.workspace = true
ring.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
urlencoding = "2"
uuid.workspace = true
