[package]
name = "alc-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "uuid"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17"
sha2 = "0.10"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1", features = ["v4", "serde"] }
