load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

rust_library(
    name = "alc-pdf",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["assets/**"]),
    crate_name = "alc_pdf",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "alc-pdf_test",
    crate = ":alc-pdf",
)
