[package]
name = "alc-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
serde_json = "1"
tracing = "0.1"
