[package]
name = "alc-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
async-trait.workspace = true
reqwest = { workspace = true, features = ["stream"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
serde_json.workspace = true
tracing.workspace = true
