[package]
name = "alc-tenko"
version = "0.1.0"
edition = "2021"

[dependencies]
alc-core = { path = "../alc-core" }
axum.workspace = true
chrono.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
