load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crates//:defs.bzl", "all_crate_deps")

rust_binary(
    name = "carins-api",
    srcs = glob(["src/**/*.rs"]),
    deps = all_crate_deps(normal = True) + [
        "//crates/alc-core",
        "//crates/alc-carins",
        "//crates/alc-storage",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
