[package]
name = "carins-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carins-api"
path = "src/main.rs"

[dependencies]
alc-core = { path = "../alc-core" }
alc-carins = { path = "../alc-carins" }
alc-storage = { path = "../alc-storage" }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
